Fix Text Align

--- a/work-page/src/styles/components/_skill-set.scss
+++ b/work-page/src/styles/components/_skill-set.scss
@@ -36,5 +36,6 @@
 
     p {
         font-size: 12px;
+        text-align: left;
     }
 }
